[gd_scene load_steps=8 format=3 uid="uid://cas1ebkgs1kfw"]

[ext_resource type="PackedScene" uid="uid://dnwffnhs6gnwh" path="res://scenes/characters/Character.tscn" id="1_82hb3"]
[ext_resource type="Script" uid="uid://8mysmbmddama" path="res://scripts/characters/spawn_nest.gd" id="1_g6lmg"]
[ext_resource type="PackedScene" uid="uid://ckkvvvr32yt5h" path="res://scenes/fx/HealRay.tscn" id="2_5pcos"]
[ext_resource type="PackedScene" uid="uid://cshcf4y2ntrp5" path="res://scenes/characters/NestSlot.tscn" id="2_baksq"]
[ext_resource type="Shader" uid="uid://ja0tditl2iqa" path="res://shaders/player.gdshader" id="2_g6lmg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82hb3"]
size = Vector2(140, 140)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5pcos"]
shader = ExtResource("2_g6lmg")
shader_parameter/health = 0.0
shader_parameter/opacity = 1.0
shader_parameter/velocity = Vector2(0, 0)
shader_parameter/can_dash = true

[node name="SpawnNest" type="Node2D"]
script = ExtResource("1_g6lmg")
metadata/_edit_horizontal_guides_ = [-50.0, -30.0, -10.0, 10.0, 30.0, 50.0, -70.0, 70.0]
metadata/_edit_vertical_guides_ = [50.0, 30.0, 10.0, -10.0, -30.0, -50.0, -70.0, 70.0]

[node name="HomeZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomeZone"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_82hb3")

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HealRay" parent="." instance=ExtResource("2_5pcos")]

[node name="Character" parent="." instance=ExtResource("1_82hb3")]
layer = 2
size = 40
render = SubResource("ShaderMaterial_5pcos")
always_visible = true

[node name="NestSlot" parent="." instance=ExtResource("2_baksq")]
position = Vector2(-20, -40)

[node name="NestSlot2" parent="." instance=ExtResource("2_baksq")]
position = Vector2(-40, -20)

[node name="NestSlot3" parent="." instance=ExtResource("2_baksq")]
position = Vector2(20, -40)

[node name="NestSlot4" parent="." instance=ExtResource("2_baksq")]
position = Vector2(40, -20)

[node name="NestSlot5" parent="." instance=ExtResource("2_baksq")]
position = Vector2(-40, 20)

[node name="NestSlot6" parent="." instance=ExtResource("2_baksq")]
position = Vector2(-20, 40)

[node name="NestSlot7" parent="." instance=ExtResource("2_baksq")]
position = Vector2(20, 40)

[node name="NestSlot8" parent="." instance=ExtResource("2_baksq")]
position = Vector2(40, 20)

[connection signal="body_entered" from="HomeZone" to="." method="_on_home_zone_entered"]
[connection signal="body_exited" from="HomeZone" to="." method="_on_home_zone_exited"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen"]
